microserviceA/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservicea
  namespace: tracing
  labels:
    app: microservicea
    version: v1
    demo: tracing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservicea
      version: v1
  template:
    metadata:
      labels:
        app: microservicea
        version: v1
    spec:
      containers:
      - name: microservicea
        image: rafabene/microservicea
        imagePullPolicy: IfNotPresent
        ports:
            - containerPort: 8080
              name: http-8080
              protocol: TCP
