microserviceA/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: microservicea
  namespace: tracing
  labels:
    app: microservicea
    demo: tracing
spec:
  selector:
    app: microservicea
  type: NodePort
  ports:
  - protocol: TCP
    name: http-8080
    port: 8080
    targetPort: 8080
